<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="30px"
    android:paddingRight="30px">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#263040"
        android:orientation="vertical">
        <!--二维码 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/wanmen_wechat" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/padding_10"
                    android:layout_marginTop="@dimen/padding_10"
                    android:text="@string/wanmen100"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:textColor="#ffffff" />
                />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/tv_weixin" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/wanmen_sina" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/padding_10"
                    android:layout_marginTop="@dimen/padding_10"
                    android:text="@string/wanmendaxue"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:textColor="#ffffff" />
                />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/tv_weibo" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/wanmen_renren" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/padding_10"
                    android:layout_marginTop="@dimen/padding_10"
                    android:text="@string/wanmendaxue"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:textColor="#ffffff" />
                />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/tv_renren" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/wanmen_qqzong" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/padding_10"
                    android:layout_marginTop="@dimen/padding_10"
                    android:text="@string/wanmendaxuezhuye"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:textColor="#ffffff" />
                />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/tv_qq" />

            </LinearLayout>

        </LinearLayout>

        <!--分割线-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/padding_1"
            android:background="@mipmap/fengexian" />

        <!--联系方式-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@mipmap/wanmen_phone"
                    android:drawablePadding="@dimen/padding_10"
                    android:text="@string/phone"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="#ffffff" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_40"
                    android:drawableLeft="@mipmap/wanmen_email"
                    android:drawablePadding="@dimen/padding_10"
                    android:text="@string/email"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="#ffffff" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@mipmap/wanmen_wangzhi"
                    android:drawablePadding="@dimen/padding_10"
                    android:text="@string/wangzhi"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="#ffffff" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_40"
                    android:drawableLeft="@mipmap/wanmen_qq"
                    android:drawablePadding="@dimen/padding_10"
                    android:text="@string/qq"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="#ffffff" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>